<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yiki</string>
    <string name="action_settings">Settings</string>
    <string name="post_title">Post Title</string>
    <string name="post_content">Post Content</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="date">Date</string>
    <string name="paragraph_tags">Add Paragraph Tags</string>
    <string name="bold_tags">Add Bold Tags</string>
    <string name="italic_tags">Add Italic Tags</string>
    <string name="add_image">Add Image</string>

</resources>
