<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_paragraph"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/paragraph_tags"/>
    <item
        android:id="@+id/action_bold"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/bold_tags"/>
    <item
        android:id="@+id/action_italic"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/italic_tags"/>
    <item
        android:id="@+id/action_image"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/add_image"/>
    <item
        android:id="@+id/menu_clear"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="always"
        android:title="@string/menu_delete"/>
    <item
        android:id="@+id/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="always"
        android:title="@string/menu_save"/>

</menu>